[package]
name = "osm-tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.29.0", features = ["serialize"] }
cairo-rs = { version = "0.17.10", features = ["png"] }
serde = { version = "1.0.164", features = ["derive"] }
ciborium = "0.2.1"
asum = "0.1.0"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
axum = "0.6.18"
