[package]
name = "osm-tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
cairo-rs = { version = "0.18", features = ["png"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
ciborium = "0.2.1"
asum = "0.1.0"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
axum = "0.7"
clap = "4.3.5"
log = "0.4.19"
env_logger = "0.10.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
polylabel = "3"
geo = "0.27"
